--- a/stage4/Code.Rmd
+++ b/stage4/Code.Rmd
@@ -10,12 +10,10 @@ Try executing this chunk by clicking the *Run* button within the chunk or by pla
 ```{r}
 #Load the required Libraries
 library("TCGAbiolinks")
-library("sesameData")
 library("SummarizedExperiment")
 library(dplyr)
 library(tidyr)
 library(ggplot2)
-library("biomaRt")
 library(EnhancedVolcano)
 library("gplots")
 library(org.Hs.eg.db)
@@ -110,6 +108,7 @@ selectResults.levels$diff_exp[selectResults.levels$logFC > 1 & selectResults.lev
 selectResults.levels$diff_exp[selectResults.levels$logFC < (-1) & selectResults.levels$FDR <0.05] <-"DOWN"
 table(selectResults.levels$diff_exp)
 
+DGEA_sig<-selectResults.levels[selectResults.levels$diff_exp == "UP"| selectResults.levels$diff_exp == "DOWN",]
 
 #To obtaing gene names as gene symbles
 converted_gene_names<- mapIds(org.Hs.eg.db, 
@@ -131,7 +130,9 @@ up_gene_symbols <- selectResults.levels$gene[selectResults.levels$diff_exp =='UP
 dn_gene_symbols <- selectResults.levels$gene[selectResults.levels$diff_exp =='DOWN']
 
 #To compare results with the paper and check the regulation of identified TF's in paper and our analysis
-paper_genes<-c("NKX2-5","FOSL1", "ETV7", "RUNX1", "RUNX3", "IRF1", "NR2F2", "PAX8","ETV7", "CEBPD", "ETV4", "ELF4","NFE2L3")
+
+#Significant transcription factors studied in the paper
+paper_genes<-c("NKX2-5","FOSL1", "ETV7", "RUNX1", "RUNX3", "IRF1", "NR2F2", "PAX8", "CEBPD", "ETV4", "ELF4","NFE2L3")
 p_enst<- mapIds(org.Hs.eg.db, 
                        keys = paper_genes, 
                        column = "ENSEMBL", 
@@ -139,6 +140,7 @@ p_enst<- mapIds(org.Hs.eg.db,
                        multiVals = "first")
 Sig_TF<-selectResults.levels[p_enst,]
 
+#All transcription factors studied in the paper(Supplementary)
 paper_tf<- c("FOS","ELF2","HIF1A", "CEBPA",	"ID3",	"TP63",	"JUN",	"RUNX3",	"SNAI1", "E2F1", "EGR1",	"CTNNB1",	"ATF1",	"STAT2",	"E2F7",	"STAT6",	"DDIT3",	"HOXB7",	"STAT3",	"ATF3",	"STAT5A",	"TFEC",	"NRF1",	"JUNB")
 paper_tf_enst<- mapIds(org.Hs.eg.db, 
                        keys = paper_tf, 
@@ -146,6 +148,7 @@ paper_tf_enst<- mapIds(org.Hs.eg.db,
                        keytype = "SYMBOL", 
                        multiVals = "first")
 all_TF_DEA<-selectResults.levels[paper_tf_enst,]
+table(all_TF_DEA$diff_exp)
 
 #Boxplot for all the significant DEG TF's
 #Obtain the Read counts matrix
@@ -162,19 +165,16 @@ melted_data <- merged_data %>%
   gather(key = "Gene", value = "Expression", -Barcode, -IDH_status)
 
 # Boxplot generation
-png(file= "BoxPlot_Sig_TF.png", width =1000, height =1000, res=150)
 ggplot(melted_data, aes(x = IDH_status, y = Expression, fill = IDH_status)) +
   geom_boxplot() +
   facet_wrap(~ Gene, scales = "free") +
   labs(title = "Gene Expression by IDH status", x = "IDH status", y = "Gene Expression")
-dev.off()
 is.element(paper_tf_enst, selectResults.levels$mRNA ) #check if the genes are present in the analysis
 is.element(paper_genes, up_gene_symbols) #check if the significant genes in the paper are upregulated in our analysis
 
 #convert very p value 0 to very small number to plot -log10(FDR) in volcano plot
 selectResults.levels$FDR[selectResults.levels$FDR == 0] <- 1e-10
 
-png(file = "Volcano plot.png  ", width =1500, height = 1500, res=150)
 EnhancedVolcano(selectResults.levels,
                 lab = selectResults.levels$gene,  # Use gene names or IDs for labels
                 selectLab = paper_genes,
@@ -185,23 +185,22 @@ EnhancedVolcano(selectResults.levels,
                 drawConnectors = TRUE,
                 widthConnectors = 0.75,
                 max.overlaps=20,
-                title = 'Volcano plot of genes differentially expressed in IDH mutant group',
+                title = 'Volcano plot of genes differentially expressed in IDH WT group',
                 pCutoff = 0.05,
                 legendPosition = 'right',
                 legendLabSize = 8,
-                legendIconSize = 3.0)
-dev.off()
+                legendIconSize = 3.0,
+                maxoverlapsConnectors = Inf)
 
 #--------------------------------------------------Heat map Visualization-------------------------------------
 
 #Collecting the list of top 5% up and down regulated genes into 1 file.
 top5percent_up<- ceiling(0.05*NROW(selectResults.levels[selectResults.levels$diff_exp == "UP",])) # calculating the number threshold for top 5 % upregulated 
 top5percent_dn<-ceiling(0.05*NROW(selectResults.levels[selectResults.levels$diff_exp == "DOWN",])) # calculating the number threshold for top 5 % downregulated genes
-DE_results<- rbind(head(selectResults.levels[order(selectResults.levels$logFC, decreasing =TRUE),],top5percent_up), tail(selectResults.levels[order(selectResults.levels$logFC, decreasing =TRUE),],top5percent_dn))
-dim(DE_results)
-heat.data<-filtData[rownames(DE_results),] # selecting the genes that are significantly differentiated from the filtered data
+DGEA_top5<- rbind(head(selectResults.levels[order(selectResults.levels$logFC, decreasing =TRUE),],top5percent_up), tail(selectResults.levels[order(selectResults.levels$logFC, decreasing =TRUE),],top5percent_dn))
+dim(DGEA_top5)
+heat.data<-filtData[rownames(DGEA_top5),] # selecting the genes that are significantly differentiated from the filtered data
 dim(heat.data)
-
 
 #color based on the age groups of the samples -column colors
 table(metadata$IDH_status) # get the number of samples in each category
@@ -218,9 +217,9 @@ ccodes
 
 #add color coding to rows
 rcodes<-c()
-for(i in 1:NROW(DE_results))
+for(i in 1:NROW(DGEA_top5))
 {
-  if(DE_results$diff_exp[i] == "UP")
+  if(DGEA_top5$diff_exp[i] == "UP")
     rcodes <- c(rcodes,"green")
   else
     rcodes <- c(rcodes, "yellow")
@@ -232,7 +231,6 @@ breaks <- c(seq(-1, 0.6, length=100),  # For red
                seq(0.61, 0.8, length=100),  # For yellow
                seq(0.81, 1, length=100))
 #Plotting Heat map
-png(filename = "Heatmap_F.png", width = 1500, height = 1500, res =150)
 par(oma = c(1,1,1,1)) #Setting outter margins
 par(mar = c(1,1,1,1)) #setting inner plot margins
 par(cex.main = 0.75) #size of the title
@@ -257,7 +255,6 @@ heatmap.2(as.matrix((heat.data)), #can use log values for better visualization
           RowSideColors = rcodes)
 legend("topright", legend = c("IDH Mutant group(n=419)", "IDH W/T group(n=94)"), fill = c("red", "blue"), title = "Column Colors", cex = 0.8)
 legend("bottomleft", legend = c("Upregulated_genes(n=212)", "Downregulated genes(n=85)"), fill = c("green", "yellow"), title = "Row Colors", cex = 0.8)
-dev.off()
 ```
 
 ```{r}
@@ -289,10 +286,146 @@ TCGAvisualize_EAbarplot(tf = rownames(dn.EA$ResBP),
                         fig.width = 30,
                         fig.height = 15)
 ```
+#-------------------------------------------Machine_learning_part-----------------------------------------------------------
+```{r}
+
+# Load necessary libraries
+library(dplyr)
+library(tidyr)
+library(caret)
+library(cluster)
+library(factoextra)
+library(ggplot2)
+library(pheatmap)
+library(preprocessCore)
+library(RColorBrewer)
+#----------------------------------------Data_preparation_and_pre_processing------------------------------------------------
+# Step 1: Data Preparation
+# Simulate or load Expression data
+data = Final_data 
+trans = as.data.frame(t(data))
+
+# Assign column names and remove the first row
+colnames(trans) <- trans[1, ]
+trans <- trans[-1, ] 
+
+# Convert all columns to numeric
+sample_ids <- rownames(trans)
+gene_names <- colnames(trans)
+trans <- as.data.frame(lapply(trans, function(x) as.numeric(as.character(x))))
+rownames(trans) <- sample_ids
+colnames(trans) <- gene_names
+
+# Step 2: Quantile Normalization
+trans <- normalize.quantiles(as.matrix(trans)) 
+rownames(trans) <- sample_ids
+colnames(trans) <- gene_names
+
+# Step 3: Variance Filtering
+variance <- apply(trans, 2, var, na.rm = TRUE)
+threshold <- quantile(variance, 0.93, na.rm = TRUE)
+filtered_data <- trans[, variance > threshold]
+
+# Check the dimensions of the filtered data
+dim(filtered_data)
 
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
+#----------------------------------------PCA_Filtering_and_visaulization---------------------------------------------------
+# Step 4: PCA
+pca_filtered_result <- prcomp(filtered_data, scale. = TRUE)
+pca_filtered_data <- as.data.frame(pca_filtered_result$x)
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
+# Plot the PCA result 
+ggplot(pca_filtered_data, aes(x = PC1, y = PC2)) +
+  geom_point(size = 2) +
+  labs(title = "PCA - Filtered Expression Data", x = "PC1", y = "PC2") +
+  theme_minimal()
 
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
+#---------------------------------------K-means_clustering_and_visaulization------------------------------------------------
+
+# Step 5: K-means Clustering
+k <- 2
+kmeans_result <- kmeans(pca_filtered_data[, c("PC1", "PC2")], centers = k)
+pca_filtered_data$cluster <- as.factor(kmeans_result$cluster)
+
+# Plot the PCA with clusters
+ggplot(pca_filtered_data, aes(x = PC1, y = PC2, color = cluster)) +
+  geom_point(size = 2) +
+  labs(title = "PCA with K-means Clustering (2 Clusters)", x = "PC1", y = "PC2") +
+  theme_minimal() +
+  scale_color_manual(values = rainbow(k)) 
+
+#---------------------------------------Extracting_sample_IDs_from_clusters-------------------------------------------------
+
+# Step 6: Extract Sample IDs for Clusters
+pca_filtered_data$Sample_ID <- rownames(pca_filtered_data)
+sample_cluster_mapping <- pca_filtered_data[, c("Sample_ID", "cluster")]
+write.csv(sample_cluster_mapping, file = "sample_cluster_mapping.csv", row.names = FALSE)
+
+# Step 7: Save Cluster Samples to Text File
+cluster_samples <- split(sample_cluster_mapping$Sample_ID, sample_cluster_mapping$cluster)
+file_conn <- file("cluster_samples.txt")
+for (i in 1:length(cluster_samples)) {
+  writeLines(paste("Cluster", i, "Sample IDs:"), file_conn)
+  writeLines(cluster_samples[[i]], file_conn)
+  writeLines("\n", file_conn)  # Add a new line between clusters
+}
+close(file_conn)
+
+#--------------------------------------- Merging Cluster Data with Metadata_to compare IDH status---------------------------
+
+
+# Step 8: Merging Cluster Data with Metadata
+merged_data <- merge(sample_cluster_mapping, Metadata, by.x = "Sample_ID", by.y = "barcode", all.x = TRUE)
+View(merged_data)
+write.csv(merged_data, 'Cluster_IDH_status.csv')
+
+
+#---------------------------------------Cluster_means_calculation_and_heatmap_plotting--------------------------------------
+
+# Step 9: Calculate Cluster-Specific Means
+cluster_means <- aggregate(filtered_data, by = list(Cluster = kmeans_result$cluster), FUN = mean)
+
+# Step 10: Heatmap Visualization CLUSTER MEANS
+pheatmap(cluster_means[,-1], 
+         cluster_rows = TRUE, 
+         cluster_cols = TRUE, 
+         main = "Heatmap of Cluster Means for Expression Data",
+         fontsize_row = 8, 
+         fontsize_col = 8, 
+         show_rownames = FALSE, 
+         show_colnames = FALSE)
+
+#---------------------------------------Log_transformation_for_visualization_of_filtered_data-------------------------------
+
+# Step 11: Log Transformation and Z-score Normalization
+filtered_data <- as.data.frame(t(filtered_data))  # Ensure samples are rows
+filtered_data_log <- log(filtered_data + 1)  # Log-transform with pseudocount
+filtered_data_scaled <- t(scale(t(filtered_data_log)))  # Z-score normalization
+
+
+# Step 12: Define Colors and Plot Heatmap
+color_palette <- colorRampPalette(c("blue", "white", "red"))(299)  # Define color palette
+
+# Save the heatmap as PNG
+png(filename = "Gene_Expression_Heatmap_logtransformed.png", width = 1800, height = 2400, res = 200)
+pheatmap(filtered_data_scaled,  
+         col = color_palette,  
+         breaks = seq(-3, 3, length.out = 300),  
+         cluster_rows = TRUE,  
+         cluster_cols = FALSE,  
+         fontsize_row = 4,  
+         fontsize_col = 4,  
+         show_rownames = FALSE,  
+         show_colnames = FALSE,  
+         main = "Gene Expression Heatmap of filtered data 2417 genes and 513 samples",
+         xlab = "Samples",  
+         ylab = "Genes",  
+         key.title = "Z-score Expression")  
+dev.off()  # Close the device to save the image
+
+```
+
+
+
+
